# doc-genie

./: .gitignore  AGENTS.md  README.md  README.zh-cn.md  openclaw-plugin.json  plugin.json  pyproject.toml
.claude-plugin/: plugin.json
.cursor/rules/: doc-genie.mdc
.github/: copilot-instructions.md
agents/: chunk-coordinator.md  conflict-agent.md  data-flow-agent.md  dependency-agent.md  extract-worker.md  pattern-agent.md  result-reviewer.md
commands/: genie-analyze.md  genie-extract.md  genie-report.md
docs/design/: semantic-extractor-design.md
docs/plans/: 2026-03-31-doc-genie-design.md  2026-03-31-plugin-restructure-plan.md
lib/: blackbox_model.py  config.py  relationship_types.py
lib/extractors/: code_analyzer.py  docx_extractor.py  markdown_extractor.py  pdf_extractor.py  tree_sitter_extractor.py
lib/patterns/: relationship_patterns.py
lib/storage/: __init__.py  genie_store.py
scripts/: cli.py  compare_baseline.py  record_baseline.py  run_e2e_eval.py
skills/: benchmark.json  benchmark_complete.json
skills/boxmatrix-extract/: OUTPUT.md  SKILL.md
skills/boxmatrix-extract-workspace/: evals.json
skills/boxmatrix-insights/: SKILL.md
skills/boxmatrix-insights-workspace/: evals.json
skills/boxmatrix-relations/: SKILL.md
skills/boxmatrix-report/: SKILL.md
skills/boxmatrix-report-workspace/: evals.json
skills/boxmatrix-report/references/: html-template.html
skills/bx-extract/: SKILL.md
skills/bx-insights/: SKILL.md
skills/bx-relations/: SKILL.md
skills/bx-report/: SKILL.md
skills/genie-extract/: SKILL.md
skills/genie-insights/: OUTPUT.md  SKILL.md
skills/genie-relations/: OUTPUT.md  SKILL.md
skills/genie-relations-workspace/: evals.json
skills/genie-report/: OUTPUT.md  SKILL.md
tests/: test_blackbox_model.py  test_cli.py  test_code_analyzer.py  test_config.py  test_docx_extractor.py  test_genie_store.py  test_markdown_extractor.py  test_pdf_extractor.py  test_relationship_patterns.py  test_relationship_types.py  test_tree_sitter_extractor.py
tests/fixtures/: sample.c  sample.docx  sample.py
(+36 files in other folders)
