[project]
name = "doc-genie"
version = "0.1.0"
description = "Extract black boxes from docs/code, map relationships, discover cross-doc insights"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "waynejing995"}]

dependencies = [
    "pdfplumber>=0.10.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "markdown-it-py>=3.0.0",
    "ast-grep-py>=0.20.0",
    "pyan3>=1.2.0",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.scripts]
genie = "scripts.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
